[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manokit"
version = "2.0.0"
authors = [
    {name="Nikolai Beloguzov", email="nickythelionfurry@gmail.com"}
]
description = "An easy-to-use, purely native email sender"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Topic :: Communications",
    "Topic :: Communications :: Email",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Typing :: Typed"
]
keywords = ["email", "manokit", "smtp", "network", "communications", "utility"]
license = {file = "LICENSE"}


[project.urls]
Homepage = "https://github.com/nickythelion/manokit"
Changelog = "https://github.com/nickythelion/manokit/blob/master/CHANGELOG.md"
Repository = "https://github.com/nickythelion/manokit"